--- a/charts/mcp-s-grafana/templates/result.yaml
+++ b/charts/mcp-s-grafana/templates/result.yaml
@@ -1,42 +1,45 @@
-{{- $all := fromYaml (include "hlmfk-0-0-5d80547625.yamls" (dict "Values" .Values) ) }}
-{{- $kustomizeFiles := fromYaml (include "hlmfk-0-0-5d80547625.kustomizeFiles" (dict "Values" .Values) ) }}
 
-{{- if .Values.manifests }}
-{{- range $key, $manifest := .Values.manifests }}
+
+{{- $templateValues := fromYaml (include "hlmfk-1-2-5d80547625.valuesYaml" (dict "Values" .Values)) }}
+{{- $values := merge $templateValues (pick .Values "overlay") }}
+
+{{- $all := fromYaml (include "hlmfk-1-2-5d80547625.yamls" (dict "Values" $values) ) }}
+
+
+{{- if $values.manifests }}
+{{- range $key, $manifest := $values.manifests }}
 {{- $result := append $all.manifests (dict "spec" $manifest) }}
 {{- $n := set $all "manifests" $result -}}
 {{- end }}
 {{- end }}
 
 {{- range $key, $manifest := $all.manifests }}
-{{- include "hlmfk-0-0.ensureMetadata" (dict "manifest" $manifest)}}
-{{- if $.Values.images }}
-  {{- include "hlmfk-0-0.updataImages" (dict "manifest" $manifest "images" $.Values.images)}}
-{{- end}}
-{{- if $.Values.globals }}
-{{- include "hlmfk-0-0.setNamespace" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "hlmfk-0-0.setNamePrefix" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "hlmfk-0-0.setNameSuffix" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "hlmfk-0-0.nameReleasePrefix" (dict "manifest" $manifest "globals" $.Values.globals "Values" $.Values)}}
-{{- include "hlmfk-0-0.labels" (dict "manifest" $manifest "globals" $.Values.globals)}}
-{{- include "hlmfk-0-0.annotations" (dict "manifest" $manifest "globals" $.Values.globals)}}
+{{- $globals := "" }}
+{{- if $values.helmifyPrefix }}
+  {{- $globals = index $values $values.helmifyPrefix }}
+{{- else }}
+  {{- $globals = $values.globals }}
+{{- end }}
+{{- include "hlmfk-1-2.ensureMetadata" (dict "manifest" $manifest)}}
+{{- include "hlmfk-1-2.updataImages" (dict "manifest" $manifest "globals" $globals)}}
+{{- if $globals }}
+{{- include "hlmfk-1-2.setNamespace" (dict "manifest" $manifest "globals" $globals)}}
+{{- include "hlmfk-1-2.setNamePrefix" (dict "manifest" $manifest "globals" $globals)}}
+{{- include "hlmfk-1-2.setNameSuffix" (dict "manifest" $manifest "globals" $globals)}}
+{{- include "hlmfk-1-2.nameReleasePrefix" (dict "manifest" $manifest "globals" $globals "Values" $values)}}
+{{- include "hlmfk-1-2.labels" (dict "manifest" $manifest "globals" $globals)}}
+{{- include "hlmfk-1-2.annotations" (dict "manifest" $manifest "globals" $globals)}}
+{{- include "hlmfk-1-2.applyManifestPatchers" (dict "manifest" $manifest "globals" $globals)}}
 {{- end}}
 
 
 {{- if and (hasKey $.Values "env") }}
-{{ include "hlmfk-0-0.updateConfigMap" (dict "manifest" $manifest "name" "mcp-s-grafana-container-vars" "data" $.Values.env) }}
+{{ include "hlmfk-1-2.updateConfigMap" (dict "manifest" $manifest "name" "mcp-s-grafana-container-vars" "data" $.Values.env) }}
 {{- end }}
 
 {{- end }}
 
-{{- if and .Values.kustomizeFiles .Values.kustomizeFiles.include }}
-{{- if .Values.kustomizeFiles.printNames}}
-{{- $kustomizeManifests := fromYaml (include "hlmfk-0-0.filterManifests" (dict "manifests" $kustomizeFiles.manifests "Values" $.Values))}}
-{{- include "hlmfk-0-0.printManifests"  $kustomizeManifests }}
-{{- else }}
-{{- include "hlmfk-0-0.printManifests" $kustomizeFiles }}
-{{- end }}
-{{- end }}
+
 
 {{- if .Values.resources }}
 {{- range $key, $manifest := .Values.resources }}
@@ -45,5 +48,5 @@
 {{- end }}
 {{- end }}
 
-{{- include "hlmfk-0-0.printManifests" $all }}
+{{- include "hlmfk-1-2.printManifests" $all }}
         
