--- a/charts/mcp-s/values.yaml
+++ b/charts/mcp-s/values.yaml
@@ -31,6 +31,7 @@ connect:
   namespace: *namespace
   replicas: 1
   appVersion: latest # will be overriden the image tag
+  secretName: mcp-s-connect-container-secret-vars
   ingress:
     className: *ingressClassName
     name: connect
@@ -54,6 +55,7 @@ app:
   replicas: 1
   enabled: true
   appVersion: latest  # will be overriden the image tag
+  secretName: mcp-s-app-container-secret-vars
   ingress:
     className: *ingressClassName
     name: app
@@ -75,6 +77,7 @@ run:
   replicas: 1
   enabled: true
   appVersion: latest  # will be overriden the image tag
+  secretName: mcp-s-run-container-secret-vars
   ingress:
     className: *ingressClassName
     name: run
@@ -94,6 +97,7 @@ dbservice:
   namespace: *namespace
   replicas: 1
   appVersion: latest  # will be overriden the image tag
+  secretName: mcp-s-db-service-container-secret-vars
   env:
     CONNECT_URL: *connect_url
     DATABASE_URL: "postgres://postgres:postgres@mcp-s-postgresql:5432/postgres?sslmode=disable"
