--- a/charts/mcp-s-grafana/templates/result.yaml
+++ b/charts/mcp-s-grafana/templates/result.yaml
@@ -4,7 +4,12 @@ DO NOT EDIT: Any changes will be overwritten
 */ -}}
 
 {{- $templateValues := fromYaml (include "hlmfk-1-2-404ea83808.valuesYaml" (dict "Values" .Values)) }}
-{{- $values := merge $templateValues (pick .Values "overlay") }}
+{{- $values := merge .Values $templateValues }}
+
+{{- /* Ensure user-provided globals take precedence */ -}}
+{{- if .Values.globals }}
+  {{- $_ := set $values "globals" .Values.globals }}
+{{- end }}
 
 {{- $all := fromYaml (include "hlmfk-1-2-404ea83808.yamls" (dict "Values" $values) ) }}
 
@@ -32,6 +37,8 @@ DO NOT EDIT: Any changes will be overwritten
 {{- include "hlmfk-1-2.nameReleasePrefix" (dict "manifest" $manifest "globals" $globals "Values" $values)}}
 {{- include "hlmfk-1-2.labels" (dict "manifest" $manifest "globals" $globals)}}
 {{- include "hlmfk-1-2.annotations" (dict "manifest" $manifest "globals" $globals)}}
+{{- include "hlmfk-1-2.podLabels" (dict "manifest" $manifest "globals" $globals "Values" $values)}}
+{{- include "hlmfk-1-2.podAnnotations" (dict "manifest" $manifest "globals" $globals "Values" $values)}}
 {{- include "hlmfk-1-2.applyManifestPatchers" (dict "manifest" $manifest "globals" $globals)}}
 {{- end}}
 
