--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -58,12 +58,18 @@ overlay: "overlays/on-prem"
 namespace: &namespace webrix-mcp-s
 replicas: &replicas 1
 appVersion: &app_tag latest
+registry: &registry quay.io/idan-chetrit/mcp-s-app
 secretName: &secret_name mcp-s-app-container-secret-vars
+podAnnotations: &podAnnotations {}
+podLabels: &podLabels {}
+nodeSelector: &nodeSelector
+  prometheus.io/scrape: "test"
 globals:
   addStandardHeaders: false
   images:
     - image: quay.io/idan-chetrit/mcp-s-app
       newTag: *app_tag
+      newName: *registry
   namespace: *namespace
   patches:
     - target:
@@ -76,6 +82,15 @@ globals:
         - op: add
           path: /spec/template/spec/containers/0/envFrom/1/secretRef/name
           value: *secret_name
+        - op: add
+          path: /spec/template/spec/nodeSelector
+          value: *nodeSelector
+        - op: add
+          path: /spec/template/metadata/annotations
+          value: *podAnnotations
+        - op: add
+          path: /spec/template/metadata/labels
+          value: *podLabels
 env:
   DB_BASE_URL: http://mcp-s-db-service
   AUTH_SECRET: aUi2V5iCVqUrbrdjKty1zH4HCqszXArV9BLVU2giqhY=
