--- a/charts/mcp-s-db-service/values.yaml
+++ b/charts/mcp-s-db-service/values.yaml
@@ -59,11 +59,16 @@ namespace: &namespace webrix-mcp-s
 replicas: &replicas 1
 appVersion: &app_tag latest
 secretName: &secret_name mcp-s-db-service-container-secret-vars
+podAnnotations: &podAnnotations {}
+podLabels: &podLabels {}
+nodeSelector: &nodeSelector {}
+registry: &registry quay.io/idan-chetrit/mcp-s-db-service
 globals:
   addStandardHeaders: false
   images:
     - image: quay.io/idan-chetrit/mcp-s-db-service
       newTag: *app_tag
+      newName: *registry
   namespace: *namespace
   patches:
     - target:
@@ -76,6 +81,15 @@ globals:
         - op: add
           path: /spec/template/spec/containers/0/envFrom/1/secretRef/name
           value: *secret_name
+        - op: add
+          path: /spec/template/spec/nodeSelector
+          value: *nodeSelector
+        - op: add
+          path: /spec/template/metadata/annotations
+          value: *podAnnotations
+        - op: add
+          path: /spec/template/metadata/labels
+          value: *podLabels
 env:
   DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
   POSTGRES_HOST_AUTH_METHOD: trust
