--- a/charts/mcp-s-grafana/values.yaml
+++ b/charts/mcp-s-grafana/values.yaml
@@ -58,11 +58,16 @@ overlay: "overlays/on-prem"
 namespace: &namespace webrix-mcp-s
 replicas: &replicas 1
 appVersion: &app_tag latest
+podAnnotations: &podAnnotations {}
+podLabels: &podLabels {}
+nodeSelector: &nodeSelector {}
+registry: &registry quay.io/idan-chetrit/mcp-s-grafana
 globals:
   addStandardHeaders: false
   images:
     - image: quay.io/idan-chetrit/mcp-s-grafana
       newTag: *app_tag
+      newName: *registry
   namespace: *namespace
   patches:
     - target:
@@ -72,6 +77,15 @@ globals:
         - op: add
           path: /spec/replicas
           value: *replicas
+        - op: add
+          path: /spec/template/spec/nodeSelector
+          value: *nodeSelector
+        - op: add
+          path: /spec/template/metadata/annotations
+          value: *podAnnotations
+        - op: add
+          path: /spec/template/metadata/labels
+          value: *podLabels
 env:
   GRAFANA_URL: http://localhost:3000
   GRAFANA_API_KEY: ""
