Updated charts version: 0.1.61 based on commit: 38da48de39cf9e93cfa33a68f76c9ed6f60027a0

--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -61,9 +61,9 @@ appVersion: &app_tag latest
 registry: &registry quay.io/idan-chetrit/mcp-s-app
 secretName: &secret_name mcp-s-app-container-secret-vars
 podAnnotations: &podAnnotations {}
-podLabels: &podLabels {}
-nodeSelector: &nodeSelector
-  prometheus.io/scrape: "test"
+podLabels: &podLabels
+  app: "mcp-s-app"
+nodeSelector: &nodeSelector {}
 globals:
   addStandardHeaders: false
   images:
