Updated charts version: 0.1.62 based on commit: a8cd29a9404fc2f40e20e1533b79e12f98fd4f0a

--- a/charts/mcp-s-connect/values.yaml
+++ b/charts/mcp-s-connect/values.yaml
@@ -60,7 +60,8 @@ replicas: &replicas 1
 appVersion: &app_tag latest
 secretName: &secret_name mcp-s-connect-container-secret-vars
 podAnnotations: &podAnnotations {}
-podLabels: &podLabels {}
+podLabels: &podLabels
+  app: "mcp-s-connect"
 nodeSelector: &nodeSelector {}
 registry: &registry quay.io/idan-chetrit/mcp-s-connect
 globals:
