--- a/charts/mcp-s-run/values.yaml
+++ b/charts/mcp-s-run/values.yaml
@@ -60,7 +60,8 @@ replicas: &replicas 1
 appVersion: &app_tag latest
 secretName: &secret_name mcp-s-run-container-secret-vars
 podAnnotations: &podAnnotations {}
-podLabels: &podLabels {}
+podLabels: &podLabels
+  app: "mcp-s-run"
 nodeSelector: &nodeSelector {}
 registry: &registry quay.io/idan-chetrit/mcp-s-run
 globals:
