--- a/charts/mcp-s-db-service/values.yaml
+++ b/charts/mcp-s-db-service/values.yaml
@@ -60,8 +60,7 @@ replicas: &replicas 1
 appVersion: &app_tag latest
 secretName: &secret_name mcp-s-db-service-container-secret-vars
 podAnnotations: &podAnnotations {}
-podLabels: &podLabels
-  app: "mcp-s-db-service"
+podLabels: &podLabels {}
 nodeSelector: &nodeSelector {}
 registry: &registry quay.io/idan-chetrit/mcp-s-db-service
 globals:
@@ -90,7 +89,9 @@ globals:
           value: *podAnnotations
         - op: add
           path: /spec/template/metadata/labels
-          value: *podLabels
+          value:
+            <<: *podLabels
+            app: "mcp-s-db-service"
 env:
   DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
   POSTGRES_HOST_AUTH_METHOD: trust
