--- a/charts/mcp-s-run/values.yaml
+++ b/charts/mcp-s-run/values.yaml
@@ -60,7 +60,8 @@ replicas: &replicas 1
 appVersion: &app_tag latest
 secretName: &secret_name mcp-s-run-container-secret-vars
 podAnnotations: &podAnnotations {}
-podLabels: &podLabels {}
+podLabels: &podLabels
+  app: "mcp-s-run"
 nodeSelector: &nodeSelector {}
 registry: &registry quay.io/idan-chetrit/mcp-s-run
 globals:
@@ -86,9 +87,7 @@ globals:
           value: *podAnnotations
         - op: add
           path: /spec/template/metadata/labels
-          value:
-            <<: *podLabels
-            app: "mcp-s-run"
+          value: *podLabels
         - op: add
           path: /spec/template/spec/nodeSelector
           value: *nodeSelector
