--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -64,6 +64,13 @@ podAnnotations: &podAnnotations {}
 podLabels: &podLabels
   app: "mcp-s-app"
 nodeSelector: &nodeSelector {}
+podResources: &podResources
+  requests:
+    cpu: 100m
+    memory: 200Mi
+  limits:
+    cpu: 1000m
+    memory: 2048Mi
 globals:
   addStandardHeaders: false
   images:
@@ -91,6 +98,9 @@ globals:
         - op: add
           path: /spec/template/metadata/labels
           value: *podLabels
+        - op: add
+          path: /spec/template/spec/containers/0/resources
+          value: *podResources
 env:
   DB_BASE_URL: http://mcp-s-db-service
   AUTH_SECRET: aUi2V5iCVqUrbrdjKty1zH4HCqszXArV9BLVU2giqhY=
