--- a/charts/mcp-s-db-service/values.yaml
+++ b/charts/mcp-s-db-service/values.yaml
@@ -64,6 +64,13 @@ podLabels: &podLabels
   app: "mcp-s-db-service"
 nodeSelector: &nodeSelector {}
 registry: &registry quay.io/idan-chetrit/mcp-s-db-service
+podResources: &podResources
+  requests:
+    cpu: 100m
+    memory: 200Mi
+  limits:
+    cpu: 1000m
+    memory: 2048Mi
 globals:
   addStandardHeaders: false
   images:
@@ -91,6 +98,9 @@ globals:
         - op: add
           path: /spec/template/metadata/labels
           value: *podLabels
+        - op: add
+          path: /spec/template/spec/containers/0/resources
+          value: *podResources
 env:
   DATABASE_URL: postgres://postgres:postgres@postgres-postgresql:5432/postgres?sslmode=disable
   POSTGRES_HOST_AUTH_METHOD: trust
