Updated charts version: 0.1.67 based on commit: 536d55b1532decd74faae7788d3ff27154f53117

--- a/charts/mcp-s-run/values.yaml
+++ b/charts/mcp-s-run/values.yaml
@@ -64,13 +64,11 @@ podLabels: &podLabels
   app: "mcp-s-run"
 nodeSelector: &nodeSelector {}
 registry: &registry quay.io/idan-chetrit/mcp-s-run
-podResources: &podResources
-  requests:
-    cpu: 100m
-    memory: 200Mi
-  limits:
-    cpu: 1000m
-    memory: 2048Mi
+podResources:
+  &podResources {
+    requests: { cpu: 100m, memory: 200Mi },
+    limits: { cpu: 1000m, memory: 2048Mi }
+  }
 globals:
   addStandardHeaders: false
   images:
