--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -64,13 +64,11 @@ podAnnotations: &podAnnotations {}
 podLabels: &podLabels
   app: "mcp-s-app"
 nodeSelector: &nodeSelector {}
-podResources: &podResources
-  requests:
-    cpu: 100m
-    memory: 200Mi
-  limits:
-    cpu: 1000m
-    memory: 2048Mi
+podResources:
+  &podResources {
+    requests: { cpu: 100m, memory: 200Mi },
+    limits: { cpu: 1000m, memory: 2048Mi }
+  }
 globals:
   addStandardHeaders: false
   images:
