Updated charts version: 0.1.68 based on commit: 91eabf1408530269c80cc94195c81d705a5ae7e1

--- a/charts/mcp-s-app/values.yaml
+++ b/charts/mcp-s-app/values.yaml
@@ -64,11 +64,13 @@ podAnnotations: &podAnnotations {}
 podLabels: &podLabels
   app: "mcp-s-app"
 nodeSelector: &nodeSelector {}
-podResources:
-  &podResources {
-    requests: { cpu: 100m, memory: 200Mi },
-    limits: { cpu: 1000m, memory: 2048Mi }
-  }
+podResources: &podResources
+  requests:
+    cpu: 100m
+    memory: 200Mi
+  limits:
+    cpu: 1000m
+    memory: 2048Mi
 globals:
   addStandardHeaders: false
   images:
