--- a/charts/mcp-s-run/templates/result.yaml
+++ b/charts/mcp-s-run/templates/result.yaml
@@ -4,15 +4,33 @@ DO NOT EDIT: Any changes will be overwritten
 */ -}}
 
 {{- $templateValues := fromYaml (include "hlmfk-1-2-575485958e.valuesYaml" (dict "Values" .Values)) }}
-{{- $values := merge $templateValues .Values }}
+{{- $values := mergeOverwrite $templateValues .Values }}
 
 {{- $all := fromYaml (include "hlmfk-1-2-575485958e.yamls" (dict "Values" $values) ) }}
 
 
 {{- if $values.manifests }}
 {{- range $key, $manifest := $values.manifests }}
+{{- $shouldInclude := true -}}
+{{- if and $manifest.metadata $manifest.metadata.annotations }}
+{{- if hasKey $manifest.metadata.annotations "helmify-kustomize.io/enabled-by" }}
+{{- $enabledByPath := index $manifest.metadata.annotations "helmify-kustomize.io/enabled-by" }}
+{{- $enabledValue := include "hlmfk-1-2.getValue" (dict "Values" $values "path" (splitList "." $enabledByPath) "default" "true") | trim -}}
+{{- if or (eq ($enabledValue | toString) "false") (eq ($enabledValue | toString) "False") (not $enabledValue) }}
+{{- $shouldInclude = false -}}
+{{- end }}
+{{- /* Remove the control annotation from the manifest */ -}}
+{{- $_ := unset $manifest.metadata.annotations "helmify-kustomize.io/enabled-by" -}}
+{{- /* If annotations is now empty, remove it entirely */ -}}
+{{- if eq (len $manifest.metadata.annotations) 0 }}
+{{- $_ := unset $manifest.metadata "annotations" -}}
+{{- end }}
+{{- end }}
+{{- end }}
+{{- if $shouldInclude }}
 {{- $result := append $all.manifests (dict "spec" $manifest) }}
 {{- $n := set $all "manifests" $result -}}
+{{- end }}
 {{- end }}
 {{- end }}
 
